--- a/angular/src/app/admin/editions/create-edition-modal.component.html
+++ b/angular/src/app/admin/editions/create-edition-modal.component.html
@@ -40,9 +40,9 @@
                                 </label>
                             </div>
                             <div class="row" *ngIf="!isFree">
-                                <div class="col-md-6">
+                                <!-- <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="DailyPrice">{{"DailyPrice" | localize}}</label>
+                                        <label for="DailyPrice">{{"DailyPrice" | localize}} *</label>
                                         <div class="input-group">
                                             <div class="input-group-prepend"><span
                                                     class="input-group-text">{{appSession.application.currencySign}}</span>
@@ -71,7 +71,7 @@
                                             </div>
                                             <validation-messages [formCtrl]="weeklyPriceInput"></validation-messages>
                                         </div>
-                                    </div>
+                                    </div> -->
     
                                 <div class="col-md-6">
                                     <div class="form-group">
