--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -2,9 +2,9 @@
 <div class="kt-grid kt-grid--hor kt-grid--root kt-login kt-login--v2 kt-login--signin" id="kt_login">
     <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor container-fluid"
         style="background-image: url(./assets/media//bg/background_1.png);">
-        <div *ngIf="!multiTenancySideIsTeanant" routerLink="/account/register" class="row d-flex justify-content-end pt-3 pr-5">
+        <div *ngIf="!multiTenancySideIsTeanant" class="d-flex justify-content-end pt-3 pr-5 border-0">
             <a  
-                class="btn btn-transparent border text-white">Get Started</a>
+            routerLink="/account/register" class="btn btn-transparent border text-white">Get Started</a>
         </div>
         <div class="kt-grid__item kt-grid__item--fluid kt-login__wrapper">
             <div class="kt-login__container">
