--- a/angular/src/account/payment/upgrade.component.html
+++ b/angular/src/account/payment/upgrade.component.html
@@ -1,4 +1,5 @@
-<div class="kt-login__form" [@routerTransition]>
+<div class="kt-login__form" style="padding:0% 20%" [@routerTransition]>
+    <div class="shadow bg-white py-5 px-5">
     <div class="kt-login__title">
         <h3>
             {{"PaymentInfo" | localize}}
@@ -43,4 +44,5 @@
         </div>
 
     </form>
+    </div>
 </div>
