--- a/angular/src/account/payment/extend.component.html
+++ b/angular/src/account/payment/extend.component.html
@@ -1,13 +1,14 @@
-<div class="kt-login__form" [@routerTransition]>
+<div class="kt-login__form" style="padding:0% 20%" [@routerTransition]>
+    <div class="shadow bg-white py-5 px-5">
     <div class="kt-login__title">
-        <h3>
+        <h3 class="text-center mb-4">
             {{"PaymentInfo" | localize}}
         </h3>
 
         <div class="kt-separator kt-separator--border-dashed"></div>
 
         <form class="kt-form mt-2" method="post">
-            <h4 class="text-center mb-4">
+            <h4 class=" mb-4">
                 {{"Extend_Edition_Description" | localize:edition.displayName}}
             </h4>
 
@@ -55,12 +56,13 @@
                 </label>
             </div>
 
-            <div class="kt-form__actions mt-4">
+            <div class="kt-form__actions mt-4 text-center">
                 <button *ngFor="let paymentGateway of paymentGateways" (click)="checkout(paymentGateway.gatewayType)"
                     class="btn btn-success btn-block">
                     {{"CheckoutWith" + getPaymentGatewayType(paymentGateway.gatewayType) | localize}}
                 </button>
             </div>
         </form>
+    </div>
     </div>
 </div>
