--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -218,13 +218,11 @@
                                                 {{"Reconciliation Type" | localize}}  
                                                 <p-sortIcon field="ReconciliationType"></p-sortIcon>  
                                             </th>
-                                            <th class="reconciliation-cell" scope="col" pSortableColumn="Balance">
+                                            <th class="reconciliation-cell" scope="col">
                                                 {{"Balance" | localize}}
-                                                <p-sortIcon field="Balance"></p-sortIcon>
                                             </th>
-                                            <th class="reconciliation-cell" scope="col" pSortableColumn="TrialBalance">
+                                            <th class="reconciliation-cell" scope="col">
                                                 {{"Trial Balance"}}
-                                                <p-sortIcon field="TrialBalance"></p-sortIcon>
                                             </th>
                                             <th class="assignee-cell" scope="col" pSortableColumn="AssigneeId">
                                                 {{"Assignee" | localize}}
