--- a/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
+++ b/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
@@ -25,7 +25,8 @@
                                     <input autofocus type="text" class="form-control" id="title" autocomplete="off" required (focusout)="CheckCategory()" name="title"
                                         [(ngModel)]="categoryobj.title">
                                         <span style="color:red" *ngIf="isCategoryExist">{{"CategorywithsameNamealreadyexist" | localize}}</span>
-                                </div>
+                                        <span style="color:red" *ngIf="!isCategoryExist">{{CategoryTitle}}</span>
+                                    </div>
                             </div>
                         </div>
                         <div class="row">
@@ -41,7 +42,7 @@
                         <div class="kt-portlet__head">
                         </div>
                         <div class="form-group margin-top-5">
-                            <button class="btn btn-brand btn-width" type="submit" [disabled]="categoryFormRef.form.invalid || isCategoryExist" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
+                            <button class="btn btn-brand btn-width" type="submit" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
                                 <i class="fa fa-save"></i>
                                 <span>{{"Save" | localize}}</span>
                             </button>
