--- a/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
+++ b/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
@@ -24,6 +24,7 @@
                                     <input autofocus type="text" class="form-control" id="title" name="title"
                                     autocomplete="off" required (focusout)="CheckAccountSubType()" [(ngModel)]="accountsSubType.title">
                                     <span style="color:red" *ngIf="accountSubtypeExist">{{"AccountSubtypewithsameNamealreadyexist" | localize}}</span>
+                                    <span style="color:red" *ngIf="!accountSubtypeExist">{{AccountTitle}}</span>
                                 </div>
                             </div>
                         </div>
