file path console.

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -149,7 +149,7 @@
                                                          <div class="form-group col-xl-3" style="height: 40px !important;">
                                                              <div class="month-calender">
                                                                 <form class="input-arrow">
-                                                                    <input [(ngModel)]="selectedDate" (focusout)="checkMonth()" (ngModelChange)="filterByMonth($event)" required="required"
+                                                                    <input [(ngModel)]="selectedDate" (ngModelChange)="filterByMonth($event)" required="required"
                                                                     autocomplete="off" class="form-control" name="date" bsDatepicker 
                                                                         placeholder="Select Month" class="form-control" name="date"
                                                                         bsDatepicker
