create new tenant with subcription

--- a/angular/src/account/payment/payment-completed.component.html
+++ b/angular/src/account/payment/payment-completed.component.html
@@ -5,11 +5,14 @@
             <p class="text-center">
                 {{"YourPaymentHasBeenCompleted" | localize}}
             </p>
+            <p>
+                {{"ActivationMessage" | localize}}
+            </p>
         </div>
         <div class="my-5">&emsp;
             <i class="fas fa-check fa-4x text-success"></i>
         </div>
-        <a class="btn btn-info" href="/app/admin/subscription-management">
-            {{"GoToSubscriptionManagement" | localize}}</a>
+        <a class="btn btn-info" href="">
+            {{"GoToHomePage" | localize}}</a>
     </div>
 </div>
